@@ -80,6 +80,7 @@ sub new {
         ssl_key_file       => $args{ssl_key_file},
         ssl_cert_file      => $args{ssl_cert_file},
         ssl_ca_file        => $args{ssl_ca_file},
+        ssl_client_ca_file => $args{ssl_client_ca_file},
         ssl_verify_mode    => $args{ssl_verify_mode},
         user               => $args{user},
         group              => $args{group},
@@ -162,8 +163,7 @@ sub prepare_socket_class {
         $args->{SSL_key_file} = $self->{ssl_key_file};
         $args->{SSL_cert_file} = $self->{ssl_cert_file};
         $args->{SSL_ca_file} = $self->{ssl_ca_file};
-        $args->{SSL_client_ca_file} = $self->{ssl_ca_file};
-        $args->{SSL_verify_mode} = $self->{ssl_verify_mode};
+        $args->{SSL_client_ca_file} = $self->{ssl_client_ca_file};
         $args->{SSL_startHandshake} = 0;
     }
 
